# chromebook-linux-audio

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.sh  chromebook-audio.service  cspell.json  deploy.sh  setup-audio
src/: lib.rs
